--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "base64-img": "^1.0.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "config": "^3.2.4",
@@ -16,10 +17,12 @@
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "ip": "^1.1.5",
+    "jimp": "^0.9.3",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.12",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "nodemailer": "^6.3.1"
   }
 }
