--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "config": "^3.2.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-http-to-https": "^1.1.4",
     "helmet": "^3.21.2",
     "ip": "^1.1.5",
     "jimp": "^0.9.3",
