--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "base64-img": "^1.0.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.19.0",
     "config": "^3.2.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
