--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +26,7 @@
     "mongoose": "^5.7.12",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
-    "nodemailer": "^6.3.1"
+    "nodemailer": "^6.3.1",
+    "nodemon": "^2.0.4"
   }
 }
