--- a/package.json
+++ b/package.json
@@ -1,32 +1,63 @@
 {
-  "name": "y",
+  "name": "jagz-mongo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "test": "jest",
+    "test:cover": "jest --coverage",
+    "start": "nodemon server.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "@babel/preset-env": "^7.8.4",
+    "@babel/register": "^7.8.3",
+    "@babel/runtime": "^7.8.4",
+    "aws-sdk": "^2.483.0",
+    "axios": "^0.18.0",
+    "babel-loader": "^8.0.0-beta.0",
+    "babel-polyfill": "^6.26.0",
     "base64-img": "^1.0.4",
     "bcryptjs": "^2.4.3",
+    "bluebird": "^3.7.1",
     "body-parser": "^1.19.0",
-    "cloudinary": "^1.19.0",
-    "config": "^3.2.4",
+    "cluster": "^0.7.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "csv-parser": "^2.3.1",
+    "csvtojson": "^2.0.10",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "express-http-to-https": "^1.1.4",
-    "helmet": "^3.21.2",
+    "express-joi-validator": "^2.0.1",
+    "express-validation": "^1.0.2",
+    "helmet": "^3.23.3",
+    "http": "0.0.0",
     "ip": "^1.1.5",
-    "jimp": "^0.9.3",
+    "jest": "^24.8.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.12",
-    "morgan": "^1.9.1",
-    "multer": "^1.4.2",
-    "nodemailer": "^6.3.1",
-    "nodemon": "^2.0.4"
-  }
+    "lodash": "^4.17.19",
+    "mock-express-response": "^0.2.2",
+    "moment-business-days": "^1.1.3",
+    "mongoose": "^5.8.11",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.1",
+    "node-cron": "^2.0.3",
+    "nodemailer": "^6.2.1",
+    "nodemon": "^1.19.0",
+    "os": "^0.1.1",
+    "sequelize": "^5.19.6",
+    "sequelize-cli": "^5.4.0",
+    "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "babel-jest": "^24.8.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.3"
+  },
+  "author": "",
+  "license": "ISC"
 }
