--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "csv-parser": "^2.3.1",
     "csvtojson": "^2.0.10",
     "dotenv": "^8.0.0",
+    "exceljs": "^4.2.1",
     "express": "^4.17.1",
     "express-joi-validator": "^2.0.1",
     "express-validation": "^1.0.2",
@@ -38,7 +39,7 @@
     "lodash": "^4.17.19",
     "mock-express-response": "^0.2.2",
     "moment-business-days": "^1.1.3",
-    "mongoose": "^5.8.11",
+    "mongoose": "^5.12.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.1",
     "node-cron": "^2.0.3",
@@ -54,9 +55,9 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "babel-jest": "^24.8.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.3"
+    "eslint": "^7.24.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
   },
   "author": "",
   "license": "ISC"
